test/core/errors/bitmask_types_error/zs/duplicated_bitmask_value_name_error.zs
package duplicated_bitmask_value_name_error;

bitmask uint8 DuplicatedValueName
{
    NONE       = 000b,
    READ       = 001b,
    READ       = 010b,
    WRITE      = 111b
};
